[package]
name = "sc_storage"
version = "0.1.0"
authors = ["Andrii Nastenko <andrii.nastenko@iohk.io>"]
edition = "2018"

[dependencies]
rocksdb = {version = "0.17.0", git = "https://github.com/HorizenOfficial/rust-rocksdb.git", branch = "transactions"}
#rocksdb = { path = "../../rocksdb/rust-wrapper/rust-rocksdb" }
rand = { version = "0.7" }
itertools = { version = "0.9.0" }
fs_extra  = { version = "0.2.0" }
tempdir = { version = "0.3.7" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 0
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = "unwind"
